--- a/edu.kit.ipd.sdq.emf.refactor.smells/plugin.xml
+++ b/edu.kit.ipd.sdq.emf.refactor.smells/plugin.xml
@@ -21,7 +21,7 @@
 		<modelsmell
         id="org.eclipse.emf.refactor.modelsmell.godclass"
         modelsmell_description="A class that has too many properties."
-        modelsmell_finderclass="org.eclipse.emf.refactor.modelsmell.godclass"
+        modelsmell_finderclass="org.eclipse.emf.refactor.modelsmell.GodClass"
         modelsmell_metamodel="http://www.eclipse.org/emf/2002/Ecore"
         modelsmell_name="God Class"/>
 </extension>
